--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiormq==3.3.1
 alembic==1.4.3
 appdirs==1.4.3
 APScheduler==3.6.3
+apturl==0.5.2
 asgiref==3.3.1
 astunparse==1.6.3
 async-generator==1.10
@@ -14,6 +15,9 @@ attrs==19.3.0
 bcrypt==3.1.7
 blinker==1.4
 blis==0.4.1
+boto3==1.16.34
+botocore==1.19.34
+Brlapi==0.7.0
 cachetools==4.2.0
 catalogue==1.0.0
 certifi==2019.11.28
@@ -24,15 +28,19 @@ colorama==0.4.3
 colorclass==2.2.0
 coloredlogs==14.3
 colorhash==1.0.3
+command-not-found==0.3
 cryptography==2.8
+cupshelpers==1.0
 cycler==0.10.0
 cymem==2.0.5
 dbus-python==1.2.16
 decorator==4.4.2
+defer==1.0.6
 discord==1.0.1
 discord.py==1.5.1
 distlib==0.3.0
 distro==1.4.0
+distro-info===0.23ubuntu1
 dj-database-url==0.5.0
 Django==3.1.3
 django-filter==2.4.0
@@ -40,6 +48,9 @@ django-storages==1.11
 dm-tree==0.1.5
 dnspython==1.16.0
 docopt==0.6.2
+duplicity==0.8.12.0
+en-core-web-md==2.2.5
+en-core-web-sm==2.3.1
 entrypoints==0.3
 fasteners==0.14.1
 fbmessenger==6.0.0
@@ -71,10 +82,12 @@ kafka-python==1.4.7
 Keras-Preprocessing==1.1.2
 keyring==18.0.1
 kiwisolver==1.3.1
+language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 lockfile==0.12.2
+louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
 Markdown==3.3.3
@@ -110,6 +123,7 @@ pyasn1-modules==0.2.8
 pycairo==1.16.2
 pycups==1.9.73
 pydot==1.4.1
+Pygments==2.3.1
 PyGObject==3.36.0
 PyJWT==1.7.1
 pykwalify==1.7.0
@@ -119,8 +133,10 @@ PyNaCl==1.3.0
 pyparsing==2.4.7
 pyRFC3339==1.1
 pyrsistent==0.17.3
+python-apt==2.0.0+ubuntu0.20.4.2
 python-crfsuite==0.9.7
 python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
 python-editor==1.0.4
 python-engineio==3.13.2
 python-socketio==4.6.1
@@ -131,6 +147,7 @@ PyYAML==5.3.1
 questionary==1.5.2
 rasa==2.1.3
 rasa-sdk==2.1.2
+rasa-x==0.34.0
 redis==3.5.3
 regex==2020.9.27
 reportlab==3.5.34
@@ -182,8 +199,13 @@ twilio==6.45.4
 typeguard==2.10.0
 typing-extensions==3.7.4.3
 tzlocal==2.1
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
 ujson==1.35
+unattended-upgrades==0.1
 urllib3==1.25.8
+usb-creator==0.3.7
 uvloop==0.14.0
 virtualenv==20.0.17
 wadllib==1.3.3
@@ -194,5 +216,6 @@ websockets==8.1
 Werkzeug==1.0.1
 whitenoise==5.2.0
 wrapt==1.12.1
+xkit==0.0.0
 yarl==1.5.1
 zipp==1.0.0
